--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,15 @@ nbproject/private
 /assets/76286f30/
 /assets/3e33a665/
 /assets/2c47cc5b/
+/assets/f971262/
+/assets/51d0ad5c/
+/assets/a973c17/
+/assets/7bde6808/
+/assets/adc80583/
+/assets/1c3f79a8/
+/assets/4f0c21fc/
+/assets/b4a45e1d/
+/assets/2aa29946/
+/assets/10c65a19/
+/assets/eb348352/
+/assets/11fcf769/
