--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@ nbproject/private
 /assets/10c65a19/
 /assets/eb348352/
 /assets/11fcf769/
+/assets/23084290/
+/assets/cf9240b6/
+/assets/5f78abec/
+/assets/7d7cf00a/
+/assets/acb3e1b1/
