--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@ nbproject/private
 /assets/acb3e1b1/
 /assets/821b24bf/
 /assets/f2e5c967/
+/assets/d87487d4/
+/assets/40c9e042/
+/assets/11d2653f/
