--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ protected/runtime/*
 protected/data/*.db
 themes/classic/views/
 
+protected/runtime/session-1.1.17.db
 .idea/.name
 .idea/dataSources.ids
 .idea/dataSources.local.xml
@@ -23,3 +24,5 @@ protected/tests/report/
 protected/tests/unit/
 protected/vendor/
 themes/classic/
+assets/
+themes/
